--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,5 @@
 fastapi==0.115.6
-uvicorn[standard]==0.34.0
-langchain==0.3.16
+langchain-core==0.3.30
 langchain-google-genai==2.0.9
 pydantic==2.10.5
 python-dotenv==1.0.1
