Ultra-lightweight optimization: Replace LangChain with native SDK and remove local venv from bundle to fix 250MB limit

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,4 @@
 fastapi==0.115.6
-langchain-core==0.3.30
-langchain-google-genai==2.0.9
+google-generativeai==0.8.3
 pydantic==2.10.5
 python-dotenv==1.0.1
