--- a/.vercelignore
+++ b/.vercelignore
@@ -1,7 +1,14 @@
+# Exclude heavy local folders from Vercel upload
+venv_local/
 frontend/node_modules/
-frontend/dist/
-frontend/src/
-backend/venv/
-backend/__pycache__/
+node_modules/
 .git/
+dist/
+frontend/dist/
+**/__pycache__/
+*.pyc
+.env
+frontend/src/
 package-lock.json
+**/venv/
+**/env/
