--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "customer-service-copilot",
+    "name": "aquaservice-copilot",
     "version": "1.0.0",
     "private": true,
     "scripts": {
