--- a/vercel.json
+++ b/vercel.json
@@ -1,18 +1,12 @@
 {
     "version": 2,
-    "builds": [
-        {
-            "src": "api/index.py",
-            "use": "@vercel/python"
-        },
-        {
-            "src": "frontend/package.json",
-            "use": "@vercel/static-build",
-            "config": {
-                "distDir": "dist"
-            }
+    "functions": {
+        "api/index.py": {
+            "runtime": "@vercel/python",
+            "includeFiles": "api/stop_reparto/**",
+            "excludeFiles": "frontend/**"
         }
-    ],
+    },
     "rewrites": [
         {
             "source": "/api/(.*)",
@@ -20,8 +14,7 @@
         },
         {
             "source": "/(.*)",
-            "destination": "frontend/$1",
-            "check": true
+            "destination": "/frontend/$1"
         }
     ]
 }
