Ultra-Simplified vercel configuration: Manual routing and python isolation

--- a/vercel.json
+++ b/vercel.json
@@ -1,20 +1,28 @@
 {
     "version": 2,
     "functions": {
-        "api/index.py": {
-            "runtime": "@vercel/python",
-            "includeFiles": "api/stop_reparto/**",
-            "excludeFiles": "frontend/**"
+        "api/*.py": {
+            "runtime": "@vercel/python"
         }
     },
-    "rewrites": [
+    "routes": [
         {
-            "source": "/api/(.*)",
-            "destination": "api/index.py"
+            "src": "/api/(.*)",
+            "dest": "api/index.py"
         },
         {
-            "source": "/(.*)",
-            "destination": "/frontend/$1"
+            "src": "/assets/(.*)",
+            "dest": "/frontend/dist/assets/$1"
+        },
+        {
+            "src": "/(.*)",
+            "dest": "/frontend/dist/$1",
+            "check": true
+        },
+        {
+            "src": "/(.*)",
+            "status": 404,
+            "dest": "/frontend/dist/index.html"
         }
     ]
 }
