--- a/vercel.json
+++ b/vercel.json
@@ -1,28 +1,12 @@
 {
-    "version": 2,
-    "functions": {
-        "api/*.py": {
-            "runtime": "@vercel/python"
-        }
-    },
-    "routes": [
+    "rewrites": [
         {
-            "src": "/api/(.*)",
-            "dest": "api/index.py"
+            "source": "/api/(.*)",
+            "destination": "/api/index.py"
         },
         {
-            "src": "/assets/(.*)",
-            "dest": "/frontend/dist/assets/$1"
-        },
-        {
-            "src": "/(.*)",
-            "dest": "/frontend/dist/$1",
-            "check": true
-        },
-        {
-            "src": "/(.*)",
-            "status": 404,
-            "dest": "/frontend/dist/index.html"
+            "source": "/(.*)",
+            "destination": "/frontend/dist/$1"
         }
     ]
 }
