Vercel V2 Pure: Using only rewrites to avoid legacy runtime errors

--- a/vercel.json
+++ b/vercel.json
@@ -1,25 +1,13 @@
 {
-    "builds": [
+    "version": 2,
+    "rewrites": [
         {
-            "src": "api/index.py",
-            "use": "@vercel/python"
+            "source": "/api/(.*)",
+            "destination": "/api/index.py"
         },
         {
-            "src": "package.json",
-            "use": "@vercel/static-build",
-            "config": {
-                "distDir": "frontend/dist"
-            }
-        }
-    ],
-    "routes": [
-        {
-            "src": "/api/(.*)",
-            "dest": "api/index.py"
-        },
-        {
-            "src": "/(.*)",
-            "dest": "/frontend/dist/$1"
+            "source": "/(.*)",
+            "destination": "/frontend/dist/$1"
         }
     ]
 }
