Fix Vercel deployment: Set outputDirectory to frontend/dist

--- a/vercel.json
+++ b/vercel.json
@@ -9,5 +9,6 @@
             "source": "/(.*)",
             "destination": "/frontend/dist/$1"
         }
-    ]
+    ],
+    "outputDirectory": "frontend/dist"
 }
