Fix Vercel file inclusion: Explicitly include api/** files

--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,8 @@
     "rewrites": [
         {
             "source": "/api/(.*)",
-            "destination": "/api/index.py"
+            "destination": "/api/index.py",
+            "includeFiles": "api/**"
         },
         {
             "source": "/(.*)",
