--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,14 @@
 {
     "version": 2,
+    "functions": {
+        "api/index.py": {
+            "runtime": "vercel-python@latest"
+        }
+    },
     "rewrites": [
         {
             "source": "/api/(.*)",
-            "destination": "/api/index.py",
-            "includeFiles": "api/**"
+            "destination": "/api/index.py"
         },
         {
             "source": "/(.*)",
